--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             constructor(name, surname, birth, rates, stat) {
                 //Студент має ім'я, прізвище, рік народження — це властивості. 
                 this.name = name,
-                    this.surname = surname,
-                    this.birth = birth,
-                    //Є масив з оцінками, це також властивість.
-                    this.rates = rates,
-                    //Ще у всіх Студентів є по масиву однакової довжини, у ньому 25 елементів, 
-                    //спочатку він не заповнений, але на 25 елементів.
-                    this.stat = stat
+                this.surname = surname,
+                this.birth = birth,
+                //Є масив з оцінками, це також властивість.
+                this.rates = rates,
+                //Ще у всіх Студентів є по масиву однакової довжини, у ньому 25 елементів, 
+                //спочатку він не заповнений, але на 25 елементів.
+                this.stat = stat
             }
 
             //Це масив, в якому відзначається відвідуваність, щоразу коли ми викликаємо метод present() 
@@ -44,7 +44,7 @@
                 return 2023 - this.birth;
             }
 
-            getAverageRate(rates) {
+            getAverageRate() {
                 //Масив – це властивість, present та absent – ​​методи.
                 const average = this.rates.reduce((a, b) => a + b, 0) / this.rates.length;
                 return average;
@@ -65,10 +65,9 @@
                 //якщо одне з цих значень менше, то - "Добре, але можна краще ", якщо обидва нижче - "Редиска!".
                 const presentPercent = sumPresent / this.stat.length;
                 const averageResult = this.getAverageRate();
-                console.log([presentPercent, averageResult]);
 
                 if (presentPercent < 0.9 && averageResult < 90) {
-                    return ("На платную отработку");
+                    return ("Идите на пересдачу");
                 }
                 else if (presentPercent < 0.9 || averageResult < 90) {
                     return ("Добре, але можна краще")
@@ -84,19 +83,24 @@
         // створити 2 - 3 екземпляри(конкретних студентів) і показати використання цих методів.
         const excellent = new Student('Ruth', 'Ross', 1993, [100, 90, 95, 93, 91, 100, 90], new Array);
         const good = new Student('Aaron', 'Collins', 2000, [100, 90, 95, 93, 91, 100, 90], new Array);
-        const unsatisfy = new Student('William', 'Burke 1992', 1995, [60, 60, 60, 70, 80, 70, 90], new Array);
+        const unsatisfy = new Student('William', 'Burke', 1995, [60, 60, 60, 70, 80, 70, 90], new Array);
         excellent.present();
         excellent.present();
         excellent.present();
         excellent.present();
         excellent.present();
+        console.log(excellent.getAge());
+        console.log(excellent.getAverageRate());
         console.log(excellent.summary());
+
 
         good.present();
         good.present();
         good.absent();
         good.absent();
         good.absent();
+        console.log(good.getAge());
+        console.log(good.getAverageRate());
         console.log(good.summary());
 
         unsatisfy.absent();
@@ -104,6 +108,8 @@
         unsatisfy.absent();
         unsatisfy.absent();
         unsatisfy.present();
+        console.log(unsatisfy.getAge());
+        console.log(unsatisfy.getAverageRate());
         console.log(unsatisfy.summary());
     </script>
 </body>
