--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         //Вам потрібно зробити конструктор сутності "Студент".
         class Student {
-            constructor(name, surname, birth, rates, stat) {
+            constructor(name, surname, birth, rates) {
                 //Студент має ім'я, прізвище, рік народження — це властивості. 
                 this.name = name,
                 this.surname = surname,
@@ -21,7 +21,7 @@
                 this.rates = rates,
                 //Ще у всіх Студентів є по масиву однакової довжини, у ньому 25 елементів, 
                 //спочатку він не заповнений, але на 25 елементів.
-                this.stat = stat
+                this.stat = new Array
             }
 
             //Це масив, в якому відзначається відвідуваність, щоразу коли ми викликаємо метод present() 
@@ -81,9 +81,9 @@
 
         // Не забудьте після того, як напишите цей конструктор,
         // створити 2 - 3 екземпляри(конкретних студентів) і показати використання цих методів.
-        const excellent = new Student('Ruth', 'Ross', 1993, [100, 90, 95, 93, 91, 100, 90], new Array);
-        const good = new Student('Aaron', 'Collins', 2000, [100, 90, 95, 93, 91, 100, 90], new Array);
-        const unsatisfy = new Student('William', 'Burke', 1995, [60, 60, 60, 70, 80, 70, 90], new Array);
+        const excellent = new Student('Ruth', 'Ross', 1993, [100, 90, 95, 93, 91, 100, 90]);
+        const good = new Student('Aaron', 'Collins', 2000, [100, 90, 95, 93, 91, 100, 90]);
+        const unsatisfy = new Student('William', 'Burke', 1995, [60, 60, 60, 70, 80, 70, 90]);
         excellent.present();
         excellent.present();
         excellent.present();
